test(AreaService): teste para create 2